<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">calls_register</string>
    <string name="app_title">Регистрация исходящих звонков</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="calls">Исходящие звонки</string>
    <string name="refresh">Обновить</string>
    <string name="authorization">Авторизация</string>
    <string name="change_user">Сменить пользователя</string>
    <string name="server_url">Адрес сервера</string>
    <string name="settings">Настройки</string>
    <string name="synchronization">Синхронизация</string>
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
</resources>
