<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:text="@string/settings"
              android:layout_gravity="center_horizontal"
              android:layout_margin="10dp"
              android:textSize="22sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <Button android:id="@+id/btn_change_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/server_url"/>

        <EditText android:id="@+id/et_server_url"
                  android:layout_marginRight="5dp"
                  android:layout_marginLeft="5dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="10dp"
                  android:text="@string/synchronization"/>

        <ToggleButton android:id="@+id/tbtn_sync_on_off"
                      android:textOn="@string/on"
                      android:textOff="@string/off"
                      android:checked="true"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>