<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" android:weightSum="1">

        <EditText
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/login"
                android:inputType="text"
                android:text="13324128">

            <requestFocus/>
        </EditText>

        <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="AWXNSUIL"/>

        <EditText
                android:id="@+id/txt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:text="+7707"/>

        <Button
                android:id="@+id/btn_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/enter"
                android:clickable="true"
                android:layout_marginTop="25dp"
                android:layout_weight="0.16"/>

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/rl_download_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true">
        <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        <TextView
                android:layout_below="@+id/progressbar"
                android:id="@+id/tv_status"
                android:text="..."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"/>
    </RelativeLayout>

</RelativeLayout>